Working on main page and API
